FlexBison/parser.output
State 44 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: block

    2 block: statement
    3      | block statement

    4 statement: assigment
    5          | print
    6          | while
    7          | if

    8 relexpression: expression COMPARE expression
    9              | expression BIGGER expression
   10              | expression SMALLER expression
   11              | expression

   12 expression: term PLUS term
   13           | term MINUS term
   14           | term OR term
   15           | term

   16 term: factor
   17     | factor MULT factor
   18     | factor DIV factor
   19     | factor AND factor

   20 factor: INT
   21       | IDENTIFIER
   22       | PLUS factor
   23       | MINUS factor
   24       | NOT factor
   25       | OPENPAR relexpression CLOSEPAR
   26       | READ OPENPAR CLOSEPAR

   27 while: WHILE relexpression statement

   28 if: IF relexpression statement else
   29   | IF relexpression statement

   30 assigment: IDENTIFIER EQUAL relexpression

   31 print: PRINT OPENPAR relexpression CLOSEPAR

   32 else: ELSE statement


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENTIFIER (258) 21 30
INT (259) 20
WHILE (260) 27
IF (261) 28 29
ELSE (262) 32
PRINT (263) 31
READ (264) 26
EQUAL (265) 30
COMPARE (266) 8
NOT (267) 24
PLUS (268) 12 22
MINUS (269) 13 23
MULT (270) 17
DIV (271) 18
AND (272) 19
OR (273) 14
BIGGER (274) 9
SMALLER (275) 10
OPENPAR (276) 25 26 31
CLOSEPAR (277) 25 26 31


Nonterminals, with rules where they appear

$accept (23)
    on left: 0
program (24)
    on left: 1, on right: 0
block (25)
    on left: 2 3, on right: 1 3
statement (26)
    on left: 4 5 6 7, on right: 2 3 27 28 29 32
relexpression (27)
    on left: 8 9 10 11, on right: 25 27 28 29 30 31
expression (28)
    on left: 12 13 14 15, on right: 8 9 10 11
term (29)
    on left: 16 17 18 19, on right: 12 13 14 15
factor (30)
    on left: 20 21 22 23 24 25 26, on right: 16 17 18 19 22 23 24
while (31)
    on left: 27, on right: 6
if (32)
    on left: 28 29, on right: 7
assigment (33)
    on left: 30, on right: 4
print (34)
    on left: 31, on right: 5
else (35)
    on left: 32, on right: 28


State 0

    0 $accept: . program $end

    IDENTIFIER  shift, and go to state 1
    WHILE       shift, and go to state 2
    IF          shift, and go to state 3
    PRINT       shift, and go to state 4

    program    go to state 5
    block      go to state 6
    statement  go to state 7
    while      go to state 8
    if         go to state 9
    assigment  go to state 10
    print      go to state 11


State 1

   30 assigment: IDENTIFIER . EQUAL relexpression

    EQUAL  shift, and go to state 12


State 2

   27 while: WHILE . relexpression statement

    IDENTIFIER  shift, and go to state 13
    INT         shift, and go to state 14
    READ        shift, and go to state 15
    NOT         shift, and go to state 16
    PLUS        shift, and go to state 17
    MINUS       shift, and go to state 18
    OPENPAR     shift, and go to state 19

    relexpression  go to state 20
    expression     go to state 21
    term           go to state 22
    factor         go to state 23


State 3

   28 if: IF . relexpression statement else
   29   | IF . relexpression statement

    IDENTIFIER  shift, and go to state 13
    INT         shift, and go to state 14
    READ        shift, and go to state 15
    NOT         shift, and go to state 16
    PLUS        shift, and go to state 17
    MINUS       shift, and go to state 18
    OPENPAR     shift, and go to state 19

    relexpression  go to state 24
    expression     go to state 21
    term           go to state 22
    factor         go to state 23


State 4

   31 print: PRINT . OPENPAR relexpression CLOSEPAR

    OPENPAR  shift, and go to state 25


State 5

    0 $accept: program . $end

    $end  shift, and go to state 26


State 6

    1 program: block .
    3 block: block . statement

    IDENTIFIER  shift, and go to state 1
    WHILE       shift, and go to state 2
    IF          shift, and go to state 3
    PRINT       shift, and go to state 4

    $default  reduce using rule 1 (program)

    statement  go to state 27
    while      go to state 8
    if         go to state 9
    assigment  go to state 10
    print      go to state 11


State 7

    2 block: statement .

    $default  reduce using rule 2 (block)


State 8

    6 statement: while .

    $default  reduce using rule 6 (statement)


State 9

    7 statement: if .

    $default  reduce using rule 7 (statement)


State 10

    4 statement: assigment .

    $default  reduce using rule 4 (statement)


State 11

    5 statement: print .

    $default  reduce using rule 5 (statement)


State 12

   30 assigment: IDENTIFIER EQUAL . relexpression

    IDENTIFIER  shift, and go to state 13
    INT         shift, and go to state 14
    READ        shift, and go to state 15
    NOT         shift, and go to state 16
    PLUS        shift, and go to state 17
    MINUS       shift, and go to state 18
    OPENPAR     shift, and go to state 19

    relexpression  go to state 28
    expression     go to state 21
    term           go to state 22
    factor         go to state 23


State 13

   21 factor: IDENTIFIER .

    $default  reduce using rule 21 (factor)


State 14

   20 factor: INT .

    $default  reduce using rule 20 (factor)


State 15

   26 factor: READ . OPENPAR CLOSEPAR

    OPENPAR  shift, and go to state 29


State 16

   24 factor: NOT . factor

    IDENTIFIER  shift, and go to state 13
    INT         shift, and go to state 14
    READ        shift, and go to state 15
    NOT         shift, and go to state 16
    PLUS        shift, and go to state 17
    MINUS       shift, and go to state 18
    OPENPAR     shift, and go to state 19

    factor  go to state 30


State 17

   22 factor: PLUS . factor

    IDENTIFIER  shift, and go to state 13
    INT         shift, and go to state 14
    READ        shift, and go to state 15
    NOT         shift, and go to state 16
    PLUS        shift, and go to state 17
    MINUS       shift, and go to state 18
    OPENPAR     shift, and go to state 19

    factor  go to state 31


State 18

   23 factor: MINUS . factor

    IDENTIFIER  shift, and go to state 13
    INT         shift, and go to state 14
    READ        shift, and go to state 15
    NOT         shift, and go to state 16
    PLUS        shift, and go to state 17
    MINUS       shift, and go to state 18
    OPENPAR     shift, and go to state 19

    factor  go to state 32


State 19

   25 factor: OPENPAR . relexpression CLOSEPAR

    IDENTIFIER  shift, and go to state 13
    INT         shift, and go to state 14
    READ        shift, and go to state 15
    NOT         shift, and go to state 16
    PLUS        shift, and go to state 17
    MINUS       shift, and go to state 18
    OPENPAR     shift, and go to state 19

    relexpression  go to state 33
    expression     go to state 21
    term           go to state 22
    factor         go to state 23


State 20

   27 while: WHILE relexpression . statement

    IDENTIFIER  shift, and go to state 1
    WHILE       shift, and go to state 2
    IF          shift, and go to state 3
    PRINT       shift, and go to state 4

    statement  go to state 34
    while      go to state 8
    if         go to state 9
    assigment  go to state 10
    print      go to state 11


State 21

    8 relexpression: expression . COMPARE expression
    9              | expression . BIGGER expression
   10              | expression . SMALLER expression
   11              | expression .

    COMPARE  shift, and go to state 35
    BIGGER   shift, and go to state 36
    SMALLER  shift, and go to state 37

    $default  reduce using rule 11 (relexpression)


State 22

   12 expression: term . PLUS term
   13           | term . MINUS term
   14           | term . OR term
   15           | term .

    PLUS   shift, and go to state 38
    MINUS  shift, and go to state 39
    OR     shift, and go to state 40

    $default  reduce using rule 15 (expression)


State 23

   16 term: factor .
   17     | factor . MULT factor
   18     | factor . DIV factor
   19     | factor . AND factor

    MULT  shift, and go to state 41
    DIV   shift, and go to state 42
    AND   shift, and go to state 43

    $default  reduce using rule 16 (term)


State 24

   28 if: IF relexpression . statement else
   29   | IF relexpression . statement

    IDENTIFIER  shift, and go to state 1
    WHILE       shift, and go to state 2
    IF          shift, and go to state 3
    PRINT       shift, and go to state 4

    statement  go to state 44
    while      go to state 8
    if         go to state 9
    assigment  go to state 10
    print      go to state 11


State 25

   31 print: PRINT OPENPAR . relexpression CLOSEPAR

    IDENTIFIER  shift, and go to state 13
    INT         shift, and go to state 14
    READ        shift, and go to state 15
    NOT         shift, and go to state 16
    PLUS        shift, and go to state 17
    MINUS       shift, and go to state 18
    OPENPAR     shift, and go to state 19

    relexpression  go to state 45
    expression     go to state 21
    term           go to state 22
    factor         go to state 23


State 26

    0 $accept: program $end .

    $default  accept


State 27

    3 block: block statement .

    $default  reduce using rule 3 (block)


State 28

   30 assigment: IDENTIFIER EQUAL relexpression .

    $default  reduce using rule 30 (assigment)


State 29

   26 factor: READ OPENPAR . CLOSEPAR

    CLOSEPAR  shift, and go to state 46


State 30

   24 factor: NOT factor .

    $default  reduce using rule 24 (factor)


State 31

   22 factor: PLUS factor .

    $default  reduce using rule 22 (factor)


State 32

   23 factor: MINUS factor .

    $default  reduce using rule 23 (factor)


State 33

   25 factor: OPENPAR relexpression . CLOSEPAR

    CLOSEPAR  shift, and go to state 47


State 34

   27 while: WHILE relexpression statement .

    $default  reduce using rule 27 (while)


State 35

    8 relexpression: expression COMPARE . expression

    IDENTIFIER  shift, and go to state 13
    INT         shift, and go to state 14
    READ        shift, and go to state 15
    NOT         shift, and go to state 16
    PLUS        shift, and go to state 17
    MINUS       shift, and go to state 18
    OPENPAR     shift, and go to state 19

    expression  go to state 48
    term        go to state 22
    factor      go to state 23


State 36

    9 relexpression: expression BIGGER . expression

    IDENTIFIER  shift, and go to state 13
    INT         shift, and go to state 14
    READ        shift, and go to state 15
    NOT         shift, and go to state 16
    PLUS        shift, and go to state 17
    MINUS       shift, and go to state 18
    OPENPAR     shift, and go to state 19

    expression  go to state 49
    term        go to state 22
    factor      go to state 23


State 37

   10 relexpression: expression SMALLER . expression

    IDENTIFIER  shift, and go to state 13
    INT         shift, and go to state 14
    READ        shift, and go to state 15
    NOT         shift, and go to state 16
    PLUS        shift, and go to state 17
    MINUS       shift, and go to state 18
    OPENPAR     shift, and go to state 19

    expression  go to state 50
    term        go to state 22
    factor      go to state 23


State 38

   12 expression: term PLUS . term

    IDENTIFIER  shift, and go to state 13
    INT         shift, and go to state 14
    READ        shift, and go to state 15
    NOT         shift, and go to state 16
    PLUS        shift, and go to state 17
    MINUS       shift, and go to state 18
    OPENPAR     shift, and go to state 19

    term    go to state 51
    factor  go to state 23


State 39

   13 expression: term MINUS . term

    IDENTIFIER  shift, and go to state 13
    INT         shift, and go to state 14
    READ        shift, and go to state 15
    NOT         shift, and go to state 16
    PLUS        shift, and go to state 17
    MINUS       shift, and go to state 18
    OPENPAR     shift, and go to state 19

    term    go to state 52
    factor  go to state 23


State 40

   14 expression: term OR . term

    IDENTIFIER  shift, and go to state 13
    INT         shift, and go to state 14
    READ        shift, and go to state 15
    NOT         shift, and go to state 16
    PLUS        shift, and go to state 17
    MINUS       shift, and go to state 18
    OPENPAR     shift, and go to state 19

    term    go to state 53
    factor  go to state 23


State 41

   17 term: factor MULT . factor

    IDENTIFIER  shift, and go to state 13
    INT         shift, and go to state 14
    READ        shift, and go to state 15
    NOT         shift, and go to state 16
    PLUS        shift, and go to state 17
    MINUS       shift, and go to state 18
    OPENPAR     shift, and go to state 19

    factor  go to state 54


State 42

   18 term: factor DIV . factor

    IDENTIFIER  shift, and go to state 13
    INT         shift, and go to state 14
    READ        shift, and go to state 15
    NOT         shift, and go to state 16
    PLUS        shift, and go to state 17
    MINUS       shift, and go to state 18
    OPENPAR     shift, and go to state 19

    factor  go to state 55


State 43

   19 term: factor AND . factor

    IDENTIFIER  shift, and go to state 13
    INT         shift, and go to state 14
    READ        shift, and go to state 15
    NOT         shift, and go to state 16
    PLUS        shift, and go to state 17
    MINUS       shift, and go to state 18
    OPENPAR     shift, and go to state 19

    factor  go to state 56


State 44

   28 if: IF relexpression statement . else
   29   | IF relexpression statement .

    ELSE  shift, and go to state 57

    ELSE      [reduce using rule 29 (if)]
    $default  reduce using rule 29 (if)

    else  go to state 58


State 45

   31 print: PRINT OPENPAR relexpression . CLOSEPAR

    CLOSEPAR  shift, and go to state 59


State 46

   26 factor: READ OPENPAR CLOSEPAR .

    $default  reduce using rule 26 (factor)


State 47

   25 factor: OPENPAR relexpression CLOSEPAR .

    $default  reduce using rule 25 (factor)


State 48

    8 relexpression: expression COMPARE expression .

    $default  reduce using rule 8 (relexpression)


State 49

    9 relexpression: expression BIGGER expression .

    $default  reduce using rule 9 (relexpression)


State 50

   10 relexpression: expression SMALLER expression .

    $default  reduce using rule 10 (relexpression)


State 51

   12 expression: term PLUS term .

    $default  reduce using rule 12 (expression)


State 52

   13 expression: term MINUS term .

    $default  reduce using rule 13 (expression)


State 53

   14 expression: term OR term .

    $default  reduce using rule 14 (expression)


State 54

   17 term: factor MULT factor .

    $default  reduce using rule 17 (term)


State 55

   18 term: factor DIV factor .

    $default  reduce using rule 18 (term)


State 56

   19 term: factor AND factor .

    $default  reduce using rule 19 (term)


State 57

   32 else: ELSE . statement

    IDENTIFIER  shift, and go to state 1
    WHILE       shift, and go to state 2
    IF          shift, and go to state 3
    PRINT       shift, and go to state 4

    statement  go to state 60
    while      go to state 8
    if         go to state 9
    assigment  go to state 10
    print      go to state 11


State 58

   28 if: IF relexpression statement else .

    $default  reduce using rule 28 (if)


State 59

   31 print: PRINT OPENPAR relexpression CLOSEPAR .

    $default  reduce using rule 31 (print)


State 60

   32 else: ELSE statement .

    $default  reduce using rule 32 (else)
